# docs/swagger.yaml
@@ -24,6 +24,15 @@ definitions:
       type:
         type: string
     type: object
+  dto.CaptchaResponse:
+    properties:
+      captcha_id:
+        description: 验证码ID
+        type: string
+      captcha_image:
+        description: Base64编码的验证码图片
+        type: string
+    type: object
   dto.CreateMenuRequest:
     properties:
       btnPermission:
@@ -166,11 +175,19 @@ definitions:
     type: object
   dto.LoginRequest:
     properties:
+      captcha_id:
+        description: 验证码ID
+        type: string
+      captcha_val:
+        description: 验证码值
+        type: string
       password:
         type: string
       username:
         type: string
     required:
+    - captcha_id
+    - captcha_val
     - password
     - username
     type: object
@@ -533,6 +550,30 @@ info:
   title: Gin-Casbin-Admin API
   version: "1.0"
 paths:
+  /auth/captcha:
+    get:
+      consumes:
+      - application/json
+      description: 生成图片验证码
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            allOf:
+            - $ref: '#/definitions/ginx.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.CaptchaResponse'
+              type: object
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/ginx.Response'
+      summary: 生成验证码
+      tags:
+      - 认证管理
   /auth/login:
     post:
       consumes:
